--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
-project(Part_A)
+project(Prat_B2)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Part_A OrgChart.hpp Demo.cpp sources/OrgChart.cpp sources/Man.hpp sources/Man.cpp TestCounter.cpp Test.cpp)
+add_executable(Prat_B2 main.cpp sources/Man.cpp sources/Man.hpp sources/OrgChart.cpp sources/OrgChart.hpp )
